# charon

./: CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  CodeCoverage.cmake  DakotaDrivers.cmake  Interpreter.cmake  ProjectName.cmake  README.md  Version.cmake
src/: CMakeLists.txt  Charon_ASCII_FileReader.cpp  Charon_ASCII_FileReader.hpp  Charon_CVFEM_WorksetFactory.cpp  Charon_CVFEM_WorksetFactory.hpp  Charon_ConfigDefs.hpp  Charon_CoupledModelEvaluator.cpp  Charon_CoupledModelEvaluator.hpp  Charon_CoupledModelEvaluator_impl.hpp  Charon_CurrentConstraintList.cpp  Charon_CurrentConstraintList.hpp  Charon_CurrentConstraintModelEvaluator.cpp  Charon_CurrentConstraintModelEvaluator.hpp  Charon_CurrentConstraintModelEvaluatorLOCA.cpp  Charon_CurrentConstraintModelEvaluatorLOCA.hpp  Charon_CurrentConstraintModelEvaluatorLOCA_impl.hpp  Charon_CurrentConstraintModelEvaluator_impl.hpp  Charon_DistanceFunctions.cpp  Charon_DistanceFunctions.hpp  Charon_Doping_Params.cpp  Charon_Doping_Params.hpp  Charon_EFFPG_WorksetFactory.cpp  Charon_EFFPG_WorksetFactory.hpp  Charon_EdgeBasisFactory.hpp  Charon_EmpiricalDamage_Data.hpp  Charon_FileReader.hpp  Charon_FreqDom_Parameters.cpp  Charon_FreqDom_Parameters.hpp  Charon_Main.cpp  Charon_Material_Properties.cpp  Charon_Material_Properties.hpp  Charon_Names.cpp  Charon_Names.hpp  Charon_Physical_Constants.cpp  Charon_Physical_Constants.hpp  Charon_PulseDamage_Spec.cpp  Charon_PulseDamage_Spec.hpp  Charon_Scaling_Parameters.cpp  Charon_Scaling_Parameters.hpp  Charon_SurfaceGeometry.hpp  (+17 more)
src/bc_strategies/: Charon_BCStrategy_Dirichlet_BJT1DBaseContact.cpp  Charon_BCStrategy_Dirichlet_BJT1DBaseContact_decl.hpp  Charon_BCStrategy_Dirichlet_BJT1DBaseContact_impl.hpp  Charon_BCStrategy_Dirichlet_Constant.cpp  Charon_BCStrategy_Dirichlet_Constant_decl.hpp  Charon_BCStrategy_Dirichlet_Constant_impl.hpp  Charon_BCStrategy_Dirichlet_ContactOnInsulator.cpp  Charon_BCStrategy_Dirichlet_ContactOnInsulator_decl.hpp  Charon_BCStrategy_Dirichlet_ContactOnInsulator_impl.hpp  Charon_BCStrategy_Dirichlet_CurrentConstraint.cpp  Charon_BCStrategy_Dirichlet_CurrentConstraint_decl.hpp  Charon_BCStrategy_Dirichlet_CurrentConstraint_impl.hpp  Charon_BCStrategy_Dirichlet_LinearRamp.cpp  Charon_BCStrategy_Dirichlet_LinearRamp_decl.hpp  Charon_BCStrategy_Dirichlet_LinearRamp_impl.hpp  Charon_BCStrategy_Dirichlet_MMS.cpp  Charon_BCStrategy_Dirichlet_MMS_decl.hpp  Charon_BCStrategy_Dirichlet_MMS_impl.hpp  Charon_BCStrategy_Dirichlet_OhmicContact.cpp  Charon_BCStrategy_Dirichlet_OhmicContact_decl.hpp  Charon_BCStrategy_Dirichlet_OhmicContact_impl.hpp  Charon_BCStrategy_Dirichlet_Periodic.cpp  Charon_BCStrategy_Dirichlet_Periodic_decl.hpp  Charon_BCStrategy_Dirichlet_Periodic_impl.hpp  Charon_BCStrategy_Dirichlet_SchottkyContact.cpp  Charon_BCStrategy_Dirichlet_SchottkyContact_decl.hpp  Charon_BCStrategy_Dirichlet_SchottkyContact_impl.hpp  Charon_BCStrategy_Dirichlet_Sinusoid.cpp  Charon_BCStrategy_Dirichlet_Sinusoid_decl.hpp  Charon_BCStrategy_Dirichlet_Sinusoid_impl.hpp  Charon_BCStrategy_Dirichlet_ThermalContact.cpp  Charon_BCStrategy_Dirichlet_ThermalContact_decl.hpp  Charon_BCStrategy_Dirichlet_ThermalContact_impl.hpp  Charon_BCStrategy_Dirichlet_Trapezoid.cpp  Charon_BCStrategy_Dirichlet_Trapezoid_decl.hpp  Charon_BCStrategy_Dirichlet_Trapezoid_impl.hpp  Charon_BCStrategy_Factory.hpp  Charon_BCStrategy_FreqDom.cpp  Charon_BCStrategy_FreqDom_decl.hpp  Charon_BCStrategy_FreqDom_impl.hpp  (+27 more)
src/cmake/: Charon_config.hpp.in  Dependencies.cmake
src/equation_sets/: Charon_EquationSet_DDIon.cpp  Charon_EquationSet_DDIonLattice.cpp  Charon_EquationSet_DDIonLattice_decl.hpp  Charon_EquationSet_DDIonLattice_impl.hpp  Charon_EquationSet_DDIon_decl.hpp  Charon_EquationSet_DDIon_impl.hpp  Charon_EquationSet_DDLattice.cpp  Charon_EquationSet_DDLattice_decl.hpp  Charon_EquationSet_DDLattice_impl.hpp  Charon_EquationSet_DefaultImpl.cpp  Charon_EquationSet_DefaultImpl_decl.hpp  Charon_EquationSet_DefaultImpl_impl.hpp  Charon_EquationSet_DriftDiffusion.cpp  Charon_EquationSet_DriftDiffusion_decl.hpp  Charon_EquationSet_DriftDiffusion_impl.hpp  Charon_EquationSet_EFFPG_DDIonLattice.cpp  Charon_EquationSet_EFFPG_DDIonLattice_decl.hpp  Charon_EquationSet_EFFPG_DDIonLattice_impl.hpp  Charon_EquationSet_EFFPG_DriftDiffusion.cpp  Charon_EquationSet_EFFPG_DriftDiffusion_decl.hpp  Charon_EquationSet_EFFPG_DriftDiffusion_impl.hpp  Charon_EquationSet_Factory.hpp  Charon_EquationSet_FreqDom_decl.hpp  Charon_EquationSet_FreqDom_impl.hpp  Charon_EquationSet_Laplace.cpp  Charon_EquationSet_Laplace_decl.hpp  Charon_EquationSet_Laplace_impl.hpp  Charon_EquationSet_Lattice.cpp  Charon_EquationSet_Lattice_decl.hpp  Charon_EquationSet_Lattice_impl.hpp  Charon_EquationSet_NLPoisson.cpp  Charon_EquationSet_NLPoisson_decl.hpp  Charon_EquationSet_NLPoisson_impl.hpp  Charon_EquationSet_SGCVFEM_DriftDiffusion.cpp  Charon_EquationSet_SGCVFEM_DriftDiffusion_decl.hpp  Charon_EquationSet_SGCVFEM_DriftDiffusion_impl.hpp  Charon_EquationSet_SGCVFEM_Laplace.cpp  Charon_EquationSet_SGCVFEM_Laplace_decl.hpp  Charon_EquationSet_SGCVFEM_Laplace_impl.hpp  Charon_EquationSet_SGCVFEM_NLPoisson.cpp  (+5 more)
src/evaluators/: Charon_AnalyticComparison.cpp  Charon_AnalyticComparison.hpp  Charon_AnalyticComparison_impl.hpp  Charon_Analytic_HeatGeneration.cpp  Charon_Analytic_HeatGeneration_decl.hpp  Charon_Analytic_HeatGeneration_impl.hpp  Charon_Avalanche_CrowellSze.cpp  Charon_Avalanche_CrowellSze_decl.hpp  Charon_Avalanche_CrowellSze_impl.hpp  Charon_Avalanche_Lackner.cpp  Charon_Avalanche_Lackner_decl.hpp  Charon_Avalanche_Lackner_impl.hpp  Charon_Avalanche_Okuto.cpp  Charon_Avalanche_Okuto_decl.hpp  Charon_Avalanche_Okuto_impl.hpp  Charon_Avalanche_Selberherr.cpp  Charon_Avalanche_Selberherr_decl.hpp  Charon_Avalanche_Selberherr_impl.hpp  Charon_Avalanche_UniBo.cpp  Charon_Avalanche_UniBoNew.cpp  Charon_Avalanche_UniBoNew_decl.hpp  Charon_Avalanche_UniBoNew_impl.hpp  Charon_Avalanche_UniBo_decl.hpp  Charon_Avalanche_UniBo_impl.hpp  Charon_Avalanche_vanOverstraeten.cpp  Charon_Avalanche_vanOverstraeten_decl.hpp  Charon_BC_LinearRamp.cpp  (+409 more)
(+3356 files in other folders)
