ADD_SUBDIRECTORY(b2ttunnel)
ADD_SUBDIRECTORY(bjt1dbasebc)
ADD_SUBDIRECTORY(bjt2d)
ADD_SUBDIRECTORY(capability)
ADD_SUBDIRECTORY(current-calculation)
ADD_SUBDIRECTORY(currentConstraints)
#ADD_SUBDIRECTORY(ddionlattice)
ADD_SUBDIRECTORY(ddlattice)
ADD_SUBDIRECTORY(fermidirac)
ADD_SUBDIRECTORY(freqdom/resistor)
ADD_SUBDIRECTORY(freqdom/pndiode)
#ADD_SUBDIRECTORY(freqdom/loca)
ADD_SUBDIRECTORY(ganmodels)
ADD_SUBDIRECTORY(hbtmodels)
ADD_SUBDIRECTORY(impact_ionization)
ADD_SUBDIRECTORY(incmpl_ioniz)
ADD_SUBDIRECTORY(interface)
ADD_SUBDIRECTORY(loca/gummel)
ADD_SUBDIRECTORY(mms/dd.rdh.1)
ADD_SUBDIRECTORY(mms/dd.rdh.2)
ADD_SUBDIRECTORY(mms/nlp.glh.1)
ADD_SUBDIRECTORY(particleStrike)
ADD_SUBDIRECTORY(resistor)
ADD_SUBDIRECTORY(scaling/dof)
ADD_SUBDIRECTORY(scaling/mesh)
ADD_SUBDIRECTORY(schottky_contacts)
ADD_SUBDIRECTORY(surfacecharge)
ADD_SUBDIRECTORY(transient)
ADD_SUBDIRECTORY(oxidecharge)
ADD_SUBDIRECTORY(tid)

