ADD_SUBDIRECTORY(b2ttunnel)
ADD_SUBDIRECTORY(b2btunnel)
ADD_SUBDIRECTORY(bjt1dbasebc)
ADD_SUBDIRECTORY(bjt2d)
ADD_SUBDIRECTORY(capability)
ADD_SUBDIRECTORY(compound_materials)
ADD_SUBDIRECTORY(current-calculation)
ADD_SUBDIRECTORY(currentConstraints)
ADD_SUBDIRECTORY(ddionlattice)
ADD_SUBDIRECTORY(ddion)
ADD_SUBDIRECTORY(ddlattice)
ADD_SUBDIRECTORY(dispcurrent)
ADD_SUBDIRECTORY(dynamic_traps)
ADD_SUBDIRECTORY(fermidirac)
ADD_SUBDIRECTORY(freqdom/resistor)
ADD_SUBDIRECTORY(freqdom/pndiode)
ADD_SUBDIRECTORY(freqdom/loca_pndiode_cv)
ADD_SUBDIRECTORY(freqdom/loca_moscap_cv)
ADD_SUBDIRECTORY(freqdom/capability_hb)
ADD_SUBDIRECTORY(freqdom/ganmodels_hb)
#ADD_SUBDIRECTORY(freqdom/MOSFET_SOI_hb)
ADD_SUBDIRECTORY(ganmodels)
ADD_SUBDIRECTORY(hbtmodels)
ADD_SUBDIRECTORY(heterointerface)
ADD_SUBDIRECTORY(impact_ionization)
ADD_SUBDIRECTORY(incmpl_ioniz)
#ADD_SUBDIRECTORY(interface)
ADD_SUBDIRECTORY(loca/gummel)
ADD_SUBDIRECTORY(mixedMode/analysis)
ADD_SUBDIRECTORY(mixedMode/oneContactTest)
ADD_SUBDIRECTORY(mixedMode/nonlinearCircuit)
ADD_SUBDIRECTORY(mixedMode/linearCircuit)
ADD_SUBDIRECTORY(mixedMode/locaDCsweep/oneContact)
ADD_SUBDIRECTORY(mixedMode/locaDCsweep/twoContact)
ADD_SUBDIRECTORY(mms/dd.rdh.1)
ADD_SUBDIRECTORY(mms/dd.rdh.2)
ADD_SUBDIRECTORY(mms/nlp.glh.1)
ADD_SUBDIRECTORY(mosQuantumCorrection/nmos)
ADD_SUBDIRECTORY(mosQuantumCorrection/pmos)
ADD_SUBDIRECTORY(particleStrike)
ADD_SUBDIRECTORY(resistor)
ADD_SUBDIRECTORY(scaling/dof)
ADD_SUBDIRECTORY(scaling/mesh)
ADD_SUBDIRECTORY(schottky_contacts)
ADD_SUBDIRECTORY(surfacecharge)
ADD_SUBDIRECTORY(transient)
ADD_SUBDIRECTORY(oxidecharge)
ADD_SUBDIRECTORY(tid)
ADD_SUBDIRECTORY(trapSRH)
ADD_SUBDIRECTORY(MOSFET/SOI)
ADD_SUBDIRECTORY(dakota/bjt1d)


